--- a/src/components/animation/animation.css
+++ b/src/components/animation/animation.css
@@ -1,20 +1,37 @@
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both
+:root {
+  --animation-duration: 0.7s;
+  --animation--position-offset: 1rem;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0
-  }
-  to {
-    opacity: 1
-  }
+.animation--fadeIn {
+  opacity: 0;
+  transform: translateY(var(--animation--position-offset));
+  transition: all var(--animation-duration) ease;
 }
 
-.fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn
+.animation--fadeIn.visible {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.animation--fadeInLeft {
+  opacity: 0;
+  transform: translateX(calc(var(--animation--position-offset) * -1));
+  transition: all var(--animation-duration) ease;
+}
+
+.animation--fadeInLeft.visible {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.animation--fadeInRight {
+  opacity: 0;
+  transform: translateX(var(--animation--position-offset));
+  transition: all var(--animation-duration) ease;
+}
+
+.animation--fadeInRight.visible {
+  transform: translateX(0);
+  opacity: 1;
 }
