--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Raleway:400,900');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Raleway:300,500,900');
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -658,4 +659,9 @@ pre code:before, pre code:after, pre tt:before, pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+:root {
+  --dark-green: rgb(27, 57, 61);
+  --font-montserrat: 'Montserrat', sans-serrif;
 }
