--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   background: #1b393d;
-  padding: 3rem;
+  padding: 3rem 0;
+  grid-gap: 1rem;
 }
 
 .footer .footer--item h3 {
@@ -44,5 +45,6 @@
 @media (max-width: 768px) {
   .footer {
     grid-template-columns: 1fr;
+    text-align: center;
   }
 }
